--- a/package.json
+++ b/package.json
@@ -1,31 +1,16 @@
 {
   "name": "nuxt-app",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "dependencies": {
-    "@mdi/font": "^7.4.47",
-    "@prisma/client": "^5.11.0",
-    "nuxt": "^3.11.1",
-    "sass": "^1.72.0",
-    "scss": "^0.2.4",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "postinstall": "nuxt prepare",
+    "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
-    "@types/node": "^20.11.30",
-    "@types/uuid": "^9.0.8",
-    "prisma": "^5.11.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.3",
-    "uuid": "^9.0.1",
-    "vite-plugin-vuetify": "^2.0.3",
-    "vuetify": "^3.5.10"
+    "@types/node": "^18",
+    "nuxt": "^3.4.3"
   }
 }
